--- a/index.css
+++ b/index.css
@@ -1,11 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Share+Tech+Mono:400,700');
 
 :root {
-  --secondary-gradient-color: #157BFF;
-  --primary-gradient-color: #0E57FF;
+  --secondary-gradient-color: #FF7A00;
+  --primary-gradient-color: #FF7A00;
   /* old colors: linear-gradient(to top, #5B3ADC 0%, #305AED 100%) */
 }
 
+body {
+    background-color: #ff7a00;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='544' height='544' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%236c6f7a' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%23ff9d57'%3E%3Ccircle cx='769' cy='229' r='7'/%3E%3Ccircle cx='539' cy='269' r='7'/%3E%3Ccircle cx='603' cy='493' r='7'/%3E%3Ccircle cx='731' cy='737' r='7'/%3E%3Ccircle cx='520' cy='660' r='7'/%3E%3Ccircle cx='309' cy='538' r='7'/%3E%3Ccircle cx='295' cy='764' r='7'/%3E%3Ccircle cx='40' cy='599' r='7'/%3E%3Ccircle cx='102' cy='382' r='7'/%3E%3Ccircle cx='127' cy='80' r='7'/%3E%3Ccircle cx='370' cy='105' r='7'/%3E%3Ccircle cx='578' cy='42' r='7'/%3E%3Ccircle cx='237' cy='261' r='7'/%3E%3Ccircle cx='390' cy='382' r='7'/%3E%3C/g%3E%3C/svg%3E");
+}
 
 
 * {
@@ -22,7 +26,8 @@ b {
 }
 
 .patternbackground {
-	background: url("img/pattern.svg") repeat fixed 0% 0%, rgba(0, 0, 0, 0) linear-gradient(to top, var(--primary-gradient-color) 0%, var(--secondary-gradient-color) 100%) repeat fixed 0% 0%;
+    /*background: url("Randomized-Pattern.svg");*/
+	/*background: url("binary.svg") repeat fixed 0% 0%, rgba(0, 0, 0, 0) linear-gradient(to top, var(--primary-gradient-color) 0%, var(--secondary-gradient-color) 100%) repeat fixed 0% 0%;*/
 }
 
 #header {
@@ -127,15 +132,14 @@ a.button {
 
 
 #links {
-    background-color: #0E57FF;
-    padding: 20px 40px;
+    background-color: #FF7A00;
+    padding: 1vh;
     display: inline-block;
-    border-radius: 3px;
     position: relative;
     left: 50%;
     transform: translateX(-50%);
-    top: -30px;
-    
+    width: 100%;
+
     webkit-box-shadow: -4px -4px 10px 0px rgba(0,0,0,0.25);
     -moz-box-shadow: -4px -4px 10px 0px rgba(0,0,0,0.25);
     box-shadow: -4px -4px 10px 0px rgba(0,0,0,0.25);
@@ -153,6 +157,7 @@ a.button {
 #hackathon {
     text-align: center;
     padding: 90px 0;
+    color: white;
 }
 
 #hackathon h2 {
@@ -200,43 +205,23 @@ a.button {
     color: #111;
 }
 
-#stats {
+#sponsors {
     padding: 100px 0;
-    background-color: #464AE5;
     color: #fdfdfd;
     /*background: url("img/pattern.svg") repeat scroll 0% 0%, rgba(0, 0, 0, 0) linear-gradient(to top, #5B3ADC 0%, #305AED 100%) repeat scroll 0% 0%;*/
 }
 
-#stats .inner {
+#sponsors .inner {
     width: 700px;
     max-width: 100%;
     margin: 0 auto;
 }
 
-#stats h2 {
+#sponsors h2 {
     font-weight: 700;
     font-size: 2.5rem;
     text-align: center;
     margin-bottom: 40px;
-}
-
-.stat {
-    display: inline-block;
-    width: 50%;
-    padding: 30px 0;
-}
-
-.stat h3 {
-    font-weight: 700;
-    font-size: 3rem;
-}
-
-.stat .subtitle {
-    color: rgba(255, 255, 255, 0.7);
-    text-transform: uppercase;
-    font-weight: 600;
-    border-top: dashed rgba(255, 255, 255, 0.7) 2px;
-    display: inline-block;
 }
 
 #faq {
@@ -279,7 +264,6 @@ a.button {
 
 #schedule {
     padding: 150px 0;
-    background-color: #464AE5;
     color: #fdfdfd;
     /*background: url("img/pattern.svg") repeat scroll 0% 0%, rgba(0, 0, 0, 0) linear-gradient(to top, #5B3ADC 0%, #305AED 100%) repeat scroll 0% 0%;*/
     position: relative;
