--- a/index.css
+++ b/index.css
@@ -392,6 +392,20 @@ a.button {
     
 }
 
+.round-btn{
+    border-radius: 3vh;
+    height: 7vh;
+    width: 20vh;
+    background-color: #ffffff;
+    border: 0;
+    cursor: pointer;
+}
+
+.round-btn:hover{
+    transform: scale(1.1,1.1);
+    transition: all .2s ease-in-out;
+}
+
 .workshop h3 {
     font-weight: bold;
     font-size: 1.75rem;
