--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@ body {
 }
 
 .section2{
-    background-color: #ff7a00;
+    background-color:#ffffff;;
 }
 
 .section3{
@@ -243,6 +243,7 @@ a.button {
     font-weight: 700;
     font-size: 2.5rem;
     margin: 30px;
+	color: #ffffff;
 }
 
 #faq .card {
@@ -354,6 +355,7 @@ a.button {
 
 #contact {
     padding: 50px 0;
+	background-color:#ffffff;
     text-align: center;
 }
 
