--- a/index.css
+++ b/index.css
@@ -13,15 +13,15 @@ body {
     /*background-size: cover;*/
 }
 
-.section1{
+#section1{
     
 }
 
-.section2{
+#section2{
     
 }
 
-.section3{
+#section3{
     
 }
 
