--- a/index.css
+++ b/index.css
@@ -296,7 +296,7 @@ a.button {
 }
 
 #schedule {
-    padding: 150px 0;
+    padding: 100px 0;
     color: var(--page-white);
     /*background: url("img/pattern.svg") repeat scroll 0% 0%, rgba(0, 0, 0, 0) linear-gradient(to top, #5B3ADC 0%, #305AED 100%) repeat scroll 0% 0%;*/
     position: relative;
@@ -308,10 +308,11 @@ a.button {
     text-align: center;
     margin-bottom: 40px;
     position: absolute;
-    top: -80px;
+    top: 50px;
     left: 50%;
     transform: translateX(-50%);
     background: none;
+	color: black;
 }
 
 #schedule h3.title {
@@ -353,6 +354,64 @@ a.button {
     letter-spacing: -2px;
 }
 
+#map_section {
+    padding: 100px 0;
+    color: var(--page-white);
+    /*background: url("img/pattern.svg") repeat scroll 0% 0%, rgba(0, 0, 0, 0) linear-gradient(to top, #5B3ADC 0%, #305AED 100%) repeat scroll 0% 0%;*/
+    position: relative;
+}
+
+#map_section h2 {
+    font-weight: 700;
+    font-size: 2.5rem;
+    text-align: center;
+    margin-bottom: 40px;
+    position: absolute;
+    top: -80px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: none;
+}
+
+#map_section h3.title {
+    font-weight: 700;
+    font-size: 2.5rem;
+    text-align: center;
+    margin: 40px auto;
+    margin-top: 80px;
+}
+
+#map_section .container {
+    margin: 0 auto;
+    display: block;
+    width: 66vw;
+    min-width: 600px;
+    text-align: center;
+}
+
+#map_section .sleft, #map_section .sright {
+    width: 600px;
+    max-width: 100%;
+    text-align: left;
+    margin: 0 auto;
+    margin-bottom: 40px;
+}
+
+#map_section .sleft h4, #map_section .sright h4 {
+    font-weight: 700;
+    font-size: 25px;
+    color: rgba(255, 255, 255, 0.95);
+    border-bottom: dashed rgba(255, 255, 255, 0.7) 2px;
+    display: inline-block;
+    margin-bottom: 20px;
+}
+
+#map_section .sleft span, #map_section .sright span {
+    font-family: "Share Tech Mono";
+    font-weight: regular !important;
+    letter-spacing: -2px;
+}
+
 .center {
     display: block;
     text-align: center;
@@ -370,6 +429,15 @@ a.button {
         min-width: 100px;
     }
     #schedule .container {
+        width: 90%;
+        min-width: 100px;
+    }
+	
+	#map_section .sleft, #map_section .sright {
+        width: 45%;
+        min-width: 100px;
+    }
+    #map_section .container {
         width: 90%;
         min-width: 100px;
     }
