--- a/index.css
+++ b/index.css
@@ -19,6 +19,10 @@ body {
     
 }
 
+#section2{
+    
+}
+
 #section3{
     
 }
@@ -125,7 +129,7 @@ b {
 a.white-button {
     display: block;
     text-decoration: none;
-    color: var(--page-orange);
+    color: #111;
     background-color: var(--page-white);
     padding: 10px 25px;
     border-radius: 20px;
@@ -135,24 +139,7 @@ a.white-button {
     cursor: pointer;
 }
 
-a.white-button:hover {
-    width: 300px;
-}
-
-a.orange-button {
-    display: block;
-    text-decoration: none;
-    color: var(--page-white);
-    background-color: var(--page-orange);
-    padding: 10px 25px;
-    border-radius: 20px;
-    width: 250px;
-    margin: 25px auto;
-    transition: 0.2s;
-    cursor: pointer;
-}
-
-a.orange-button:hover {
+/*#header*/ a.white-button:hover { /*disable header so all a.white-buttons do this*/
     width: 300px;
 }
 
@@ -296,7 +283,7 @@ a.button {
 }
 
 #schedule {
-    padding: 100px 0;
+    padding: 150px 0;
     color: var(--page-white);
     /*background: url("img/pattern.svg") repeat scroll 0% 0%, rgba(0, 0, 0, 0) linear-gradient(to top, #5B3ADC 0%, #305AED 100%) repeat scroll 0% 0%;*/
     position: relative;
@@ -308,11 +295,10 @@ a.button {
     text-align: center;
     margin-bottom: 40px;
     position: absolute;
-    top: 50px;
+    top: -80px;
     left: 50%;
     transform: translateX(-50%);
     background: none;
-	color: black;
 }
 
 #schedule h3.title {
@@ -354,64 +340,6 @@ a.button {
     letter-spacing: -2px;
 }
 
-#map_section {
-    padding: 100px 0;
-    color: var(--page-white);
-    /*background: url("img/pattern.svg") repeat scroll 0% 0%, rgba(0, 0, 0, 0) linear-gradient(to top, #5B3ADC 0%, #305AED 100%) repeat scroll 0% 0%;*/
-    position: relative;
-}
-
-#map_section h2 {
-    font-weight: 700;
-    font-size: 2.5rem;
-    text-align: center;
-    margin-bottom: 40px;
-    position: absolute;
-    top: -80px;
-    left: 50%;
-    transform: translateX(-50%);
-    background: none;
-}
-
-#map_section h3.title {
-    font-weight: 700;
-    font-size: 2.5rem;
-    text-align: center;
-    margin: 40px auto;
-    margin-top: 80px;
-}
-
-#map_section .container {
-    margin: 0 auto;
-    display: block;
-    width: 66vw;
-    min-width: 600px;
-    text-align: center;
-}
-
-#map_section .sleft, #map_section .sright {
-    width: 600px;
-    max-width: 100%;
-    text-align: left;
-    margin: 0 auto;
-    margin-bottom: 40px;
-}
-
-#map_section .sleft h4, #map_section .sright h4 {
-    font-weight: 700;
-    font-size: 25px;
-    color: rgba(255, 255, 255, 0.95);
-    border-bottom: dashed rgba(255, 255, 255, 0.7) 2px;
-    display: inline-block;
-    margin-bottom: 20px;
-}
-
-#map_section .sleft span, #map_section .sright span {
-    font-family: "Share Tech Mono";
-    font-weight: regular !important;
-    letter-spacing: -2px;
-}
-
 .center {
     display: block;
     text-align: center;
@@ -429,15 +357,6 @@ a.button {
         min-width: 100px;
     }
     #schedule .container {
-        width: 90%;
-        min-width: 100px;
-    }
-	
-	#map_section .sleft, #map_section .sright {
-        width: 45%;
-        min-width: 100px;
-    }
-    #map_section .container {
         width: 90%;
         min-width: 100px;
     }
@@ -528,9 +447,8 @@ a.button {
 }
 
 .workshop .see-more {
-    /*background: linear-gradient(to bottom right, var(--primary-gradient-color) 0%, var(--secondary-gradient-color) 100%);*/
-	background-color: var(--page-orange);
-    color: var(--page-white);
+    background: linear-gradient(to bottom right, var(--primary-gradient-color) 0%, var(--secondary-gradient-color) 100%);
+    color: #fefefe;
     text-decoration: none;
     padding: 10px 15px;
     font-size: 1rem;
