Change margins to fit better on more screens. Bandaid.

--- a/index.css
+++ b/index.css
@@ -186,7 +186,7 @@ a.button {
 #links a {
     color: white;
     padding: 5px 10px;
-    margin: 0 30px;
+    margin: 0 2%;
     font-weight: bold;
 }
 
