--- a/index.css
+++ b/index.css
@@ -474,6 +474,12 @@ a.button {
     display: inline-block;
 }
 
+#award-categories a {
+	margin: 2vh;
+	/*font-size: 1vh;*/
+	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
 .person img {
     /*height: 50px;*/
     width: 50px;
